--- a/Timer/Timer/Timer.csproj
+++ b/Timer/Timer/Timer.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="IWorkingTimer.cs" />
+    <Compile Include="MoodleTestTimer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestTimer.cs" />
@@ -144,6 +145,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="sounds\LYNC_ringing.wav" />
+    <Content Include="sounds\LYNC_ringtone2.wav" />
+    <Content Include="sounds\LYNC_ringtone3.wav" />
+    <Content Include="sounds\LYNC_ringtone4.wav" />
+    <Content Include="sounds\LYNC_ringtone5.wav" />
+    <Content Include="sounds\LYNC_ringtone6.wav" />
+    <Content Include="sounds\LYNC_ringtone7.wav" />
     <Content Include="TimerDb.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>TimerDb.Context.cs</LastGenOutput>
@@ -158,5 +166,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
