--- a/Timer/Timer/Timer.csproj
+++ b/Timer/Timer/Timer.csproj
@@ -145,7 +145,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="sounds\LYNC_ringing.wav" />
+    <Content Include="sounds\LYNC_ringing.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="sounds\LYNC_ringtone2.wav" />
     <Content Include="sounds\LYNC_ringtone3.wav" />
     <Content Include="sounds\LYNC_ringtone4.wav" />
