--- a/Timer/Timer/Timer.csproj
+++ b/Timer/Timer/Timer.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="IWorkingTimer.cs" />
+    <Compile Include="MoodleTaskTimer.cs" />
     <Compile Include="MoodleTestTimer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -148,7 +149,9 @@
     <Content Include="sounds\LYNC_ringing.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="sounds\LYNC_ringtone2.wav" />
+    <Content Include="sounds\LYNC_ringtone2.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="sounds\LYNC_ringtone3.wav" />
     <Content Include="sounds\LYNC_ringtone4.wav" />
     <Content Include="sounds\LYNC_ringtone5.wav" />
